<resources>
    <string name="app_name">CCIT_SUDA</string>
    <string name="t회원가입">회원가입</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="pw_check">PW check</string>
    <string name="id중복">ID중복확인</string>
    <string name="phone">Phone</string>
    <string name="인증번호">인증번호 전송</string>
    <string name="sms_check">SMS check</string>
    <string name="인증확인">인증확인</string>
    <string name="회원가입">회원가입</string>
    <string name="돌아가기">돌아가기</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

</resources>
